# MapApp

./: .env-test  Dockerfile  README.md  alembic.ini  docker-compose.yml  index.html  nginx.conf  pyproject.toml  pytest.ini  requirements.txt
Docs/: DockerReadme.md
src/: database.py  exceptions.py  init.py  main.py  seed_data.py
src/api/: admin.py  auth.py  chat.py  dependencies.py  events.py  images.py
src/connectors/: redis_connector.py  ws_connector.py
src/health/: health.py
src/migrations/: env.py
src/migrations/versions/: 05_1535-75f090dc3cd5_initial_migration.py  09_2233-e16040c1e9bb_add_events.py
src/models/: __init__.py  events.py  users.py
src/repositories/: admin.py  base.py  events.py  users.py
src/repositories/mappers/: base.py  mappers.py
src/schemas/: events.py  users.py
src/services/: admin.py  auth.py  events.py  images.py
src/tasks/: tasks.py
src/utils/: db_manager.py  ratelimitter.py
tests/: conftest.py  mock_events.json  mock_users.json
tests/integration_tests/: test_auth.py
tests/integration_tests/auth/: test_api.py
tests/integration_tests/events/: test_api.py
tests/unit_tests/: test_auth.py
